# docs/swagger.json
@@ -1,7 +1,10 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "API Server for Media Processing Platform",
+        "title": "Media Processing Platform API",
+        "contact": {},
+        "version": "1.0"
     },
     "paths": {
         "/login": {
@@ -110,6 +113,11 @@
         },
         "/result/{task_id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Returns the processing result of a task by its ID",
                 "produces": [
                     "application/json"
@@ -141,6 +149,12 @@
                             "$ref": "#/definitions/media-processing-platform_internal_delivery_http_shared.Response"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/media-processing-platform_internal_delivery_http_shared.Response"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -152,6 +166,11 @@
         },
         "/status/{task_id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Returns the current processing status of a task by its ID",
                 "produces": [
                     "application/json"
@@ -183,6 +202,12 @@
                             "$ref": "#/definitions/media-processing-platform_internal_delivery_http_shared.Response"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/media-processing-platform_internal_delivery_http_shared.Response"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -194,6 +219,11 @@
         },
         "/task": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Creates a new media processing task",
                 "consumes": [
                     "application/json"
@@ -225,6 +255,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/media-processing-platform_internal_delivery_http_shared.Response"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/media-processing-platform_internal_delivery_http_shared.Response"
                         }
@@ -291,6 +327,10 @@
         },
         "media-processing-platform_internal_domain.UserDTO": {
             "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
             "properties": {
                 "password": {
                     "type": "string"
@@ -299,6 +339,14 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "Введите токен в формате: Bearer \u003cUUID_токен_сессии\u003e",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
